# todoapp

./: README.md  main.py  pyproject.toml  tasks.json
todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
todoapp/: main.py  taskmanager.py
